dev skills lab part 2 create read update delete edit

--- a/views/skills-details.ejs
+++ b/views/skills-details.ejs
@@ -7,11 +7,12 @@
 </head>
 <body>
     Eric's Dev Skills: <br>
-    <li>
-        Here is the skill:<br><br>
-            ID: <%= devSkills_obj.id %><br>
-           Skill: <%= devSkills_obj.skill %><br>
-            Level: <%= devSkills_obj.level %>
-    </li>
+        <li>
+             Here is the skill:<br><br>
+                 ID: <%= devSkills_obj.id %><br>
+                 Skill: <%= devSkills_obj.skill %><br>
+                 Level: <%= devSkills_obj.level %>
+        </li>
+    <a href="/skills/new">Add a skill</a>
 </body>
 </html>
